--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.0'
     compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'com.bartoszlipinski.recyclerviewheader:library:1.2.0'
 }
