--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
         <activity
             android:name=".activity.ScrollingMovieActivity"
             android:label="@string/title_activity_scrolling_movie"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:launchMode="singleTask"
+            android:name=".activity.RegisterActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
