解决下拉刷新的bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.0.0'
     //bmob-sms ：Bmob单独为短信服务提供的包
     compile 'cn.bmob.android:bmob-sms:1.0.1'
+    compile files('libs/gson-2.3.1.jar')
 }
